<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomeActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:background="@color/colorPrimary">

        <Button
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="5dp"
                android:text="@string/update"
                style="@style/Widget.AppCompat.Button.Colored"/>

        <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/update_button"
                card_view:cardCornerRadius="4dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                <TextView
                        android:id="@+id/lastConnexion_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:text="@string/lastConnexion"/>

                <TextView
                        android:id="@+id/lastConnexion"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="Last Update"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/card_status"
                card_view:cardCornerRadius="4dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                <TextView
                        android:id="@+id/ip_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:text="@string/ip"/>

                <TextView
                        android:id="@+id/ip"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="Ip"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_serialId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/card_ip"
                card_view:cardCornerRadius="4dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                <TextView
                        android:id="@+id/serialId_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:text="@string/serialId"/>

                <TextView
                        android:id="@+id/serialId"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="Serial ID"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/card_serialId"
                card_view:cardCornerRadius="4dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:gravity="center_horizontal">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/androidVersion_title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:gravity="center_horizontal"
                            android:text="@string/phoneAndroidVersion"/>

                    <TextView
                            android:id="@+id/androidVersion"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="15sp"
                            android:layout_marginTop="5dp"
                            android:gravity="center_horizontal"
                            android:text="Android Version"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="15dp">

                    <TextView
                            android:id="@+id/currentServiceVersion_title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:gravity="center_horizontal"
                            android:text="@string/currentServiceVersion"/>

                    <TextView
                            android:id="@+id/currentServiceVersion"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="15sp"
                            android:layout_marginTop="5dp"
                            android:gravity="center_horizontal"
                            android:text="PandaLab Version"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_infos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/card_version"
                card_view:cardCornerRadius="4dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                <TextView
                        android:id="@+id/model_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/phoneModel"/>

                <TextView
                        android:id="@+id/model"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="Model"/>

                <TextView
                        android:id="@+id/product_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/phoneProduct"/>

                <TextView
                        android:id="@+id/product"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="Product"/>

                <TextView
                        android:id="@+id/device_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/phoneDevice"/>

                <TextView
                        android:id="@+id/device"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="Device"/>

                <TextView
                        android:id="@+id/manufacturer_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/phoneManufacturer"/>

                <TextView
                        android:id="@+id/manufacturer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="Manufacturer"/>

                <TextView
                        android:id="@+id/brand_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/phoneBrand"/>

                <TextView
                        android:id="@+id/brand"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="Brand"/>

                <TextView
                        android:id="@+id/enroll_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/enroll"/>

                <TextView
                        android:id="@+id/enroll"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/enroll"/>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <com.leroymerlin.pandroid.ui.loader.ProgressWheel
                android:id="@+id/sync_progress"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="visible"
                tools:visibility="visible"
                app:barColor="@color/pandroid_red"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
